--- a/package.json
+++ b/package.json
@@ -14,12 +14,8 @@
     "type": "git",
     "url": "git+https://github.com/Madhust/ej2-grid-angular-webpack.git"
   },
-  "author": "Madhu Sudhanan P",
+  "author": "Hariharan",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Madhust/ej2-grid-angular-webpack/issues"
-  },
-  "homepage": "https://github.com/Madhust/ej2-grid-angular-webpack#readme",
   "dependencies": {
     "@angular/common": "~4.0.0",
     "@angular/compiler": "~4.0.0",
@@ -34,8 +30,9 @@
     "core-js": "^2.4.1",
     "rxjs": "5.0.1",
     "zone.js": "^0.8.4",
-    "@syncfusion/ej2-ng-grids": "1.0.17",
-    "@syncfusion/ej2-ng-buttons": "*"
+    "@syncfusion/ej2-ng-grids": "^1.0.17",
+    "@syncfusion/ej2-ng-buttons": "*",
+    "@syncfusion/ej2-ng-navigations": "*"
   },
   "devDependencies": {
     "lite-server": "^2.2.2",
