--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "rxjs": "5.0.1",
     "zone.js": "^0.8.4",
     "@syncfusion/ej2-ng-grids": "1.0.17",
-    "@syncfusion/ej2-ng-buttons": "*"
+    "@syncfusion/ej2-ng-buttons": "*",
+    "@syncfusion/ej2-ng-navigations": "*"
   },
   "devDependencies": {
     "lite-server": "^2.2.2",
