--- a/package.json
+++ b/package.json
@@ -10,16 +10,7 @@
     "dev": "node ./node_modules/lite-server/bin/lite-server",
     "start": "npm run rmf && npm run build & npm run bundle & npm run dev"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Madhust/ej2-grid-angular-webpack.git"
-  },
-  "author": "Madhu Sudhanan P",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Madhust/ej2-grid-angular-webpack/issues"
-  },
-  "homepage": "https://github.com/Madhust/ej2-grid-angular-webpack#readme",
   "dependencies": {
     "@angular/common": "~4.0.0",
     "@angular/compiler": "~4.0.0",
@@ -34,15 +25,16 @@
     "core-js": "^2.4.1",
     "rxjs": "5.0.1",
     "zone.js": "^0.8.4",
-    "@syncfusion/ej2-ng-grids": "1.0.17",
-    "@syncfusion/ej2-ng-buttons": "*"
+    "@syncfusion/ej2-ng-grids": "*",
+    "@syncfusion/ej2-ng-buttons": "*",
+    "@syncfusion/ej2-ng-navigations": "*"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.42",
+    "@types/node": "^6.0.46",
     "lite-server": "^2.2.2",
     "rimraf": "^2.5.2",
-    "typescript": "2.3.3",
-    "@types/node": "^6.0.46",
-    "@types/core-js": "^0.9.42",
+    "typescript": "^2.4.2",
     "webpack": "^2.2.1"
   }
 }
