Edit with sum values sample added

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/Madhust/ej2-grid-angular-webpack.git"
   },
-  "author": "Madhu Sudhanan P",
+  "author": "Hariharan",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Madhust/ej2-grid-angular-webpack/issues"
@@ -34,7 +34,7 @@
     "core-js": "^2.4.1",
     "rxjs": "5.0.1",
     "zone.js": "^0.8.4",
-    "@syncfusion/ej2-ng-grids": "1.0.17",
+    "@syncfusion/ej2-ng-grids": "*",
     "@syncfusion/ej2-ng-buttons": "*"
   },
   "devDependencies": {
